# ROBO-FEUP

./: CMakeLists.txt  README.md  map.yaml  package.xml
include/: reactive_robot.h
src/: main.cpp  reactive_robot.cpp
stdr_files/stdr_launchers/launch/: reactive-robot-W.launch  reactive-robot-W2.launch  reactive-robot.launch  reactive-robot2.launch
stdr_files/stdr_resources/maps/: map.yaml  map2.yaml  mapW.yaml  mapW2.yaml
stdr_files/stdr_resources/resources/robots/: robot.yaml
